properties encoding fixed

--- a/src/main/resources/locales/studentmvc/console-text.properties
+++ b/src/main/resources/locales/studentmvc/console-text.properties
@@ -1,5 +1,5 @@
-errors.you_entered_wrong_id=
-messages.enter_command=??????? ???????: 
+errors.you_entered_wrong_id=You entered wrong id!
+messages.enter_command=Enter command: 
 messages.enter_student_age=Enter student's age: 
 messages.enter_student_name=Enter student's name: 
 messages.result=Result: 
