--- a/src/main/resources/locales/studentmvc/console-text_ru.properties
+++ b/src/main/resources/locales/studentmvc/console-text_ru.properties
@@ -1,7 +1,7 @@
-errors.you_entered_wrong_id=?? ????? ?? ???????? ??? ? ??????!
-messages.enter_command=Enter command: 
-messages.enter_student_age=??????? ??????? ????????: 
-messages.enter_student_name=??????? ??? ????????: 
-messages.result=?????????: 
-questions.input_student_id_for_deleting=??????? ?? ???????? ??? ????????: 
-questions.select_student_for_deleting=???????? ?? ?????? ???????? ??? ????????: 
+errors.you_entered_wrong_id=Вы ввели неверное ИД!
+messages.enter_command=Введите команду: 
+messages.enter_student_age=Введите возраст студента: 
+messages.enter_student_name=Введите имя студента: 
+messages.result=Резульатат: 
+questions.input_student_id_for_deleting=Введите ИД студента для удаления: 
+questions.select_student_for_deleting=Выберите студента для удаления: 
